[tool.poetry]
name = "discobot"
version = "0.1.0"
description = ""
authors = ["ankuru <ankuru.ahahahaha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = {extras = ["voice"], version = "^2.3.2"}
python-dotenv = "^1.0.1"
discord = "^2.3.2"
gtts = "^2.5.1"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
